--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "scripts": {
     "build": "frog vercel-build",
     "dev": "frog dev",
-    "deploy": "vercel"
+    "deploy": "vercel",
+    "start": "frog start"
   },
   "dependencies": {
-    "@vercel/node": "^3.2.24",
-    "dotenv": "^16.4.5",
-    "frog": "^0.18.2",
-    "hono": "^4.6.9"
+    "frog": "latest",
+    "@vercel/edge": "latest",
+    "dotenv": "latest"
+  
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "vercel": "^32.7.2"
+    "vercel": "^32.4.1"
   }
 }
